Bug 952220 - Read blob on non-main thread. r=jesup